Tilføjet Team Management og Team. Andre små rettelser tilføjet og unødvendige ting fjernet.